# gatt-wifi-setup

./: .envrc  .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  result
src/: main.rs
systemd/: wifi-setup.service  wifi-setup.service.example
